# AestheticRxNetworkIntelligentBot

./: .pre-commit-config.yaml  MacroFile.md  README.md  bitbucket-pipelines.yml  conda.yaml  env.sample  makefile  manifest.yaml  pyproject.toml  pytest.ini  robot.yaml  task.py
.github/workflows/: ci.yml  scheduled-automation.yml
devdata/: env.json  vault.json
devdata/work-items-in/: work-items.json
output/: business_report_2026-01-24_00-16-03.html  business_report_2026-04-24_11-35-38.html  business_report_2026-04-24_11-43-25.html  business_report_2026-04-24_11-58-57.html  business_report_2026-04-24_12-30-25.html  business_report_2026-04-24_12-32-07.html  business_report_2026-04-24_13-00-39.html  business_report_2026-04-24_13-00-47.html  metrics_history.db  workflow_report_2026-01-24_00-16-06.html  workflow_report_2026-04-24_11-35-38.html  workflow_report_2026-04-24_11-43-25.html  workflow_report_2026-04-24_11-58-57.html  workflow_report_2026-04-24_12-30-25.html  workflow_report_2026-04-24_12-32-07.html  workflow_report_2026-04-24_13-00-39.html  workflow_report_2026-04-24_13-00-47.html  workflow_report_2026-04-24_13-01-34.html  workflow_report_2026-04-24_13-01-42.html  workflow_report_2026-04-24_14-14-27.html  workflow_report_2026-04-24_14-38-15.html
output/exports/extracted_data/: advertisement_configs.csv  advertisement_placements.csv  advertisement_pricing_configs.csv  advertisement_rotation_configs.csv  advertisements.csv  ai_models.csv  analytics.csv  api_tokens.csv  award_message_templates.csv  badges.csv  certificates.csv  debt_thresholds.csv  delivery_tracking.csv  doctors.csv  email_deliveries.csv  gmail_messages.csv  hall_of_pride.csv  leaderboard.csv  notifications.csv  order_statistics.csv  orders.csv  otp_codes.csv  otp_configs.csv  products.csv  research_benefit_configs.csv  research_papers.csv  research_reports.csv  research_reward_eligibility.csv  research_settings.csv  research_upvotes.csv  research_views.csv  signup_ids.csv  team_tier_configs.csv  tier_configs.csv  user_activity.csv  user_wallets.csv  user_wallets_full.csv  users.csv  video_advertisements.csv
output/work-items-in/: workitems.json
scripts/: install_bitwarden.py
src/: __init__.py  config.py  email_reader.py
src/bitwarden/: __init__.py  auth.py  credentials.py
src/company_challan/: generate_challan.py  xlsx_to_image.py
src/libraries/: __init__.py  aestheticrxnetwork_api.py  aestheticrxnetwork_api_impl.py  credentials.py  google_drive.py  google_sheets.py  logger.py  qwebsite_api.py  report_generator.py  sheet_utils.py  workitems.py
src/models/: __init__.py  order.py
src/processes/: __init__.py
src/processes/advertisement/: __init__.py  advertisement_management_process.py  advertisement_manager.py
src/processes/business_report/: __init__.py  business_report_process.py  data_loader.py  financial_sheet_setup.py  financial_tracking_loader.py  report_builder.py
src/processes/business_report/analytics/: __init__.py  anomaly_detector.py  comparative_analyzer.py  forecast_engine.py  trend_analyzer.py
src/processes/business_report/analyzers/: __init__.py  advertisement_analyzer.py  business_kpi_analyzer.py  financial_analyzer.py  order_analyzer.py  payment_analyzer.py  research_analyzer.py  user_analyzer.py
src/processes/business_report/data_persistence/: __init__.py  historical_loader.py  metrics_storage.py  mock_data_generator.py  schema.py
src/processes/data_analysis/: __init__.py  data_analysis_manager.py  data_analysis_process.py
src/processes/invoice/: __init__.py  invoice_generation_process.py  invoice_manager.py
src/processes/order/: __init__.py  api_handler.py  comparator.py  order_management_process.py  order_manager.py  sheet_handler.py
src/processes/payment/: __init__.py  update_payment_process.py
src/processes/signup/: __init__.py  signup_id_management_process.py  signup_id_manager.py
src/processes/user/: __init__.py  user_management_process.py  user_manager.py
tests/: __init__.py  conftest.py  test_api_handler.py  test_api_handler_unpaid.py  test_comparator.py  test_config.py  test_invoice_manager.py  test_order_manager.py  test_process.py  test_report_generator.py  test_sheet_handler.py  test_sheet_utils.py  test_update_payment_process.py  test_user_management.py  test_workitems.py
workflow/: __init__.py  process.py
